--- a/README
+++ b/README
@@ -3,7 +3,8 @@ This project is an excuse to play with YUI3 widgets and Chrome extensions. It im
 These are the commands:
 ' (single quote) : initiate search mode (focuses the search field if already in search mode)
 esc              : terminate search mode
-cmd-g            : focus on a matched link; hit repeatedly to cycle through
+cmd-g            : focus on a matched link; hit repeatedly to cycle forwards
+shift-cmd-g      : focus on a matched link; hit repeatedly to cycle backwards
 
 Workflow:
 1) Hit the single quote to initiate search mode. The search field appears with focus.
